--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1><b>POTULA BALA BHARADWAJ</b></h1>
     <h2>VIT</h2>
     <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
     </ul>
     <h3>A bit more about me</h3>
