--- a/about.html
+++ b/about.html
@@ -7,14 +7,12 @@
 <body>
         
         <ol>
-            <p>College name: "VIT"</p>
-            <p>Branch:CSE</p>
-            <p>year:2nd year</p>
-            <p>section:A</p>
-            <p>Register no:19pa1a05f0</p>
+            <p>My name is Bharadwaj of regd no:19palao5f0 studying in 
+               Vishnu institute of technology, Bhimavaram in 
+               department of computer science and engineering</p>
         </ol>
     
-    <h4<a href="index.html">Back</a></h4>
+    <h4<a href="index.html"></a></h4>
 
 
 </body>
